# reso-dns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/dns/: Cargo.toml
crates/dns/src/: builder.rs  domain_name.rs  error.rs  helpers.rs  lib.rs  macros.rs  message.rs  qname.rs  reader.rs  writer.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: forwarder.rs  lib.rs
crates/resolver/src/forwarder/: mod.rs  request.rs  resolver.rs  tcp.rs  udp.rs  upstream.rs
crates/server/: Cargo.toml
crates/server/src/: doh.rs  lib.rs  tcp.rs  udp.rs
reso/: .env.example  Cargo.toml  build.rs  config.toml.example
reso/metrics_migrations/01-init/: up.sql
reso/metrics_migrations/02-fix-indexes/: up.sql
reso/metrics_migrations/03-denormalize/: up.sql
reso/metrics_migrations/04-compound-sort-index/: up.sql
reso/metrics_migrations/05-metrics-buckets/: up.sql
reso/migrations/01-init/: up.sql
reso/migrations/02-api/: up.sql
reso/migrations/03-blocklist-enabled/: up.sql
reso/migrations/04-config-kv/: up.sql
reso/migrations/05-rate-limited/: up.sql
reso/migrations/06-drop-logs/: up.sql
reso/migrations/07-local-records/: up.sql
reso/migrations/08-blocklist-subscriptions/: up.sql
reso/migrations/09-api-keys/: up.sql
reso/migrations/10-subscription-cache-headers/: up.sql
reso/migrations/11-match-type/: up.sql
reso/src/: config.rs  env_config.rs  global.rs  init.sql  local.rs  local_tests.rs  main.rs  migrations.rs  server_builder.rs  time.rs  uuid.rs
reso/src/api/: activity.rs  api_keys.rs  auth.rs  config.rs  cookie.rs  cookie_tests.rs  domain_rules.rs  error.rs  error_tests.rs  list_subscriptions.rs  local_records.rs  mod.rs  pagination.rs  pagination_tests.rs  stats.rs
reso/src/api/activity/: mod.rs  mod_tests.rs
reso/src/api/api_keys/: mod.rs
reso/src/api/auth/: middleware.rs  mod.rs
reso/src/api/blocklist/: mod.rs
reso/src/api/config/: mod.rs
reso/src/api/domain_rules/: mod.rs
reso/src/api/list_subscriptions/: mod.rs
reso/src/api/local_records/: mod.rs
reso/src/api/stats/: mod.rs
reso/src/blocklist/: model.rs  service.rs  service_tests.rs
reso/src/database/: mod.rs  query.rs
reso/src/database/models/: activity_log.rs  api_key.rs  blocked_domain.rs  blocklist.rs  blocklist_tests.rs  client_metrics.rs  config.rs  domain_metrics.rs  domain_rule.rs  error_log.rs  error_log_tests.rs  list_subscription.rs  local_record.rs  mod.rs  query_log.rs  query_log_tests.rs  user.rs  user_session.rs
reso/src/metrics/: event.rs  event_tests.rs  mod.rs  service.rs  service_tests.rs  task.rs  truncation.rs
reso/src/middleware/: block_designated_resolvers.rs  block_resolver_privacy.rs  blocklist.rs  cache.rs  domain_rules.rs  local_records.rs  metrics.rs  mod.rs  ratelimit.rs  reso.rs  reso_local.rs
reso/src/ratelimit/: mod.rs
reso/src/services/: api_keys.rs  auth.rs  config.rs  domain_rules.rs  local_records.rs  mod.rs
reso/src/services/api_keys/: mod.rs
reso/src/services/auth/: mod.rs
reso/src/services/blocklist/: mod.rs
reso/src/services/config/: mod.rs  model.rs
reso/src/services/domain_rules/: mod.rs
reso/src/services/local_records/: mod.rs
reso/src/utils/: mod.rs  password.rs  password_tests.rs  uuid.rs
reso/web/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
reso/web/src/app/: app.tsx  globals.css  index.tsx  router.tsx
reso/web/src/app/pages/: api-keys.tsx  blocklist.tsx  config.tsx  domain-rules.tsx  home.tsx  local-records.tsx  login.tsx  logs.tsx  not-found.tsx  setup.tsx
reso/web/src/components/: ActionBadge.tsx  ConfirmDeleteButton.tsx  FormError.tsx  GridPage.tsx  Initializer.tsx  MatchTypeBadge.tsx  PageLoader.tsx  ProtectedRoute.tsx  ProtocolBadge.tsx  RecordTypeBadge.tsx  StatusBadge.tsx  Toaster.tsx  ToggleButton.tsx
reso/web/src/components/api-keys/: ApiKeyCreatedDialog.tsx  ApiKeysGrid.tsx  CreateApiKeyDialog.tsx
reso/web/src/components/blocklist/: BlocklistDialog.tsx  BlocklistGrid.tsx
reso/web/src/components/config/: ConfigField.tsx  ConfigSection.tsx  DurationInput.tsx  UpstreamPicker.tsx
reso/web/src/components/dashboard/: QueryTimeline.tsx  RecentActivity.tsx  StatCard.tsx  TopDonutChart.tsx
reso/web/src/components/domain-rules/: AddRuleDialog.tsx  DomainRulesGrid.tsx  EditRuleDialog.tsx  SubscriptionDialog.tsx  SubscriptionsGrid.tsx
reso/web/src/components/local-records/: LocalRecordDialog.tsx  LocalRecordsGrid.tsx
reso/web/src/components/logs/: ActivityDetailDrawer.tsx  LogsGrid.tsx
reso/web/src/contexts/: ApiClientContext.ts
reso/web/src/hooks/: useActivities.ts  useAddDomainRule.ts  useAddSubscription.ts  useBlockDomain.ts  useBlocklist.ts  useConfig.ts  useCreateDomain.ts  useCreateLocalRecord.ts  useDebounce.ts  useDomainRules.ts  useIsAuthenticated.ts  useIsSetupRequired.ts  useListSubscriptions.ts  useLocalRecords.ts  useLogout.ts  useRecentActivity.ts  useRemoveDomain.ts  useRemoveDomainRule.ts  useRemoveLocalRecord.ts  useRemoveSubscription.ts  useToggleDomain.ts  useToggleDomainRule.ts  useToggleLocalRecord.ts  useToggleSubscription.ts  useToggleSubscriptionSync.ts  useUpdateConfig.ts  useUpdateDomainRule.ts  useUptime.ts
reso/web/src/hooks/api-keys/: useApiKeys.ts  useCreateApiKey.ts  useDeleteApiKey.ts
reso/web/src/hooks/auth/: useIsAuthenticated.ts
reso/web/src/hooks/dashboard/: useLiveStats.ts
reso/web/src/hooks/domain-rules/: useAddDomainRule.ts  useAddSubscription.ts  useDomainRules.ts  useListSubscriptions.ts  useRemoveSubscription.ts  useToggleSubscriptionSync.ts  useUpdateDomainRule.ts
reso/web/src/hooks/local-records/: useLocalRecords.ts  useToggleLocalRecord.ts
reso/web/src/hooks/logs/: useActivities.ts
reso/web/src/layouts/: DashboardLayout.tsx
reso/web/src/lib/: dns.ts  status-info.ts  theme.ts  time.ts  version.ts
reso/web/src/lib/api/: activity.ts  api-keys.ts  blocklist.ts  client.ts  config.ts  domain-rules.ts  error.ts  list-subscriptions.ts  local-records.ts  (+2 more)
(+48 files in other folders)
