[package]
name = "dns_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-trait = "0.1.88"
bitflags = "2.9.1"
bytes = { version = "1.10.1", features = ["serde"] }
idna = "1.0.3"
lru-cache = "0.1.2"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
