[workspace]
members = ["crates/*", "reso"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-trait = "0.1.88"
bytes = { version = "1.11.1", features = ["serde"] }
lru-cache = "0.1.2"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tokio = { version = "1.45.1", features = ["full", "macros"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "serde", "json"] }
idna = "1.1.0"
bitflags = "2.9.3"
futures = "0.3.31"
thiserror = "2.0.17"
rand = { version = "0.9.2" }
dashmap = "6.1.0"
reso-dns = { path = "crates/dns" }
reso-server = { path = "crates/server" }
reso-resolver = { path = "crates/resolver" }
reso-cache = { path = "crates/cache" }
reso-blocklist = { path = "crates/blocklist" }
reso-context = { path = "crates/context" }
reso-inflight = { path = "crates/inflight" }
