[package]
name = "reso"
version = "0.1.8"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono = "0.4.42"
dashmap.workspace = true
idna.workspace = true
moka = { workspace = true }
once_cell.workspace = true
rand.workspace = true
reso-blocklist.workspace = true
reso-cache.workspace = true
reso-context.workspace = true
reso-dns.workspace = true
reso-resolver.workspace = true
reso-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-serde = "0.2.0"
tracing-subscriber.workspace = true
include_dir = { version = "0.7.4", features = ["metadata"] }
axum = "0.8.8"
uuid = { version = "1.19.0", features = ["v7"] }
argon2 = { version = "0.5.3", features = ["default", "std"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
serde_json = "1.0.148"
tower-http = { version = "0.6.8", features = ["cors"] }
futures.workspace = true
rust-embed = { version = "8.11.0", features = ["axum"], optional = true }
mime_guess = { version = "2.0.5" }
tempfile = { version = "3.15.0", optional = true }
tokio-stream = { version = "0.1.18", features = ["full"] }
dotenvy = "0.15.7"
url = { version = "2.5.8", features = ["serde"] }
tokio-util = "0.7.18"
deadpool-sqlite = "0.13.0"
rusqlite = { version = "0.38.0", features = ["bundled", "uuid"] }
time = "0.3.47"

[dev-dependencies]
tempfile = "3.15.0"


[features]
default = ["embed-frontend"]
embed-frontend = ["dep:rust-embed"]
tempfile = ["dep:tempfile"]
