[package]
name = "reso"
version = "0.3.1"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
idna.workspace = true
moka = { workspace = true }
once_cell.workspace = true
rand.workspace = true
sha2.workspace = true
reso-list.workspace = true
reso-cache.workspace = true
reso-context.workspace = true
reso-dns.workspace = true
reso-resolver.workspace = true
reso-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-serde = "0.2.0"
tracing-subscriber.workspace = true
include_dir = { version = "0.7.4", features = ["metadata"] }
axum = "0.8.9"
uuid = { version = "1.23.4", features = ["v7", "serde"] }
argon2 = { version = "0.5.3", features = ["default", "std"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
aes-gcm = "0.11.0"
base64 = "0.22.1"
serde_json = "1.0.150"
tower-http = { version = "0.7.0", features = ["cors"] }
futures.workspace = true
rust-embed = { version = "8.11.0", features = ["axum"], optional = true }
mime_guess = { version = "2.0.5" }
tempfile = { version = "3.27.0", optional = true }
tokio-stream = { version = "0.1.18", features = ["full"] }
dotenvy = "0.15.7"
url = { version = "2.5.8", features = ["serde"] }
tokio-util = "0.7.18"
deadpool-sqlite = "0.13.0"
rusqlite = { version = "0.38.0", features = ["bundled", "uuid"] }
time = "0.3.53"
reqwest = { version = "0.13.4", features = ["stream"] }
bitflags = "2.11.1"
mimalloc = "0.1.52"

[dev-dependencies]
tempfile = "3.27.0"


[features]
default = ["embed-frontend"]
embed-frontend = ["dep:rust-embed"]
tempfile = ["dep:tempfile"]
