[package]
name = "reso-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
bytes.workspace = true
idna.workspace = true
once_cell.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "reso_dns"
path = "src/lib.rs"
