[package]
name = "reso-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
lru-cache.workspace = true
moka.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
turso.workspace = true
reso-dns.workspace = true
reso-context.workspace = true
crossbeam-queue = "0.3.12"

[lib]
name = "reso_resolver"
path = "src/lib.rs"
