[package]
name = "reso-resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
reso-dns.workspace = true
reso-context.workspace = true
reso-cache.workspace = true
reso-inflight.workspace = true
rand.workspace = true
dashmap.workspace = true

[lib]
name = "reso_resolver"
path = "src/lib.rs"
