[package]
name = "reso-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
lru-cache.workspace = true
moka.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
reso-dns.workspace = true
reso-resolver.workspace = true
reso-context.workspace = true
tracing-subscriber.workspace = true
turso.workspace = true
futures.workspace = true

[lib]
name = "reso_server"
path = "src/lib.rs"
