[package]
name = "reso-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
bytes.workspace = true
lru-cache.workspace = true
moka.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
reso-dns.workspace = true
reso-resolver.workspace = true
reso-context.workspace = true
tracing-subscriber.workspace = true
turso.workspace = true
futures.workspace = true
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
base64 = "0.22.1"
url = "2.5.7"
tokio-rustls = "0.26.2"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
hyper-rustls = { version = "0.27.7", features = ["ring"] }

[lib]
name = "reso_server"
path = "src/lib.rs"
